--- a/ui/src/app/views/settings/action/form/action.form.html
+++ b/ui/src/app/views/settings/action/form/action.form.html
@@ -2,7 +2,7 @@
     {{'common_help_no_group' | translate}}
 </div>
 
-<form class="ui form" #myform>
+<form class="ui form" id="ActionEdit" #myform>
     <div class="ui segment">
         <div class="field">
             <div class="fields">
